--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iharant.github.io/rs-school-react",
+  "homepage": "https://iharant.github.io/graphiql-app",
   "name": "reactapp",
   "private": true,
   "version": "0.0.0",
