--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://iharant.github.io/graphiql-app",
-  "name": "reactapp",
+  "name": "graphiql-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +17,8 @@
     "coverage": "vitest run --coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "prepare": "husky install .husky"
+    "prepare": "husky install .husky",
+    "commit": "git add . && read -p '> To AMEND the previous commit press \"a\", otherwise just skip this part and press \"Enter\"\n> => ' choice && if [[ $choice == 'a' ]]; then git commit --amend --no-edit; else git commit; fi"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -54,7 +55,6 @@
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "jsdom": "^21.1.1",
-    "lint-staged": "^13.2.0",
     "msw": "^1.2.1",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
