--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
