--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@types/js-cookie": "^3.0.3",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
-    "normalize.css": "^8.0.1",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.5",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.2",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8"
