--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@monaco-editor/react": "^4.5.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/js-cookie": "^3.0.3",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "i18next": "^22.4.15",
@@ -32,10 +33,12 @@
     "monaco-editor": "^0.38.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.2",
     "react-redux": "^8.0.5",
+    "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
     "vite-plugin-svgr": "^3.2.0"
