--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "firebase": "^9.21.0",
+    "graphql": "^16.6.0",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
