--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "baseUrl": "./src",
     "jsx": "react-jsx",
     "paths": {
-      "assets": ["assets/index"],
+      "assets": ["assets/*"],
       "components": ["components/*"],
       "features": ["features/*"],
       "pages": ["pages/*"],
