--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
