--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.29.11",
+    "@tanstack/react-query-devtools": "^4.29.11",
     "@types/js-cookie": "^3.0.3",
     "@types/react-copy-to-clipboard": "^5.0.4",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "firebase": "^9.21.0",
     "graphql": "^16.6.0",
@@ -34,13 +36,13 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.2",
-    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
     "vite-plugin-svgr": "^3.2.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
